# raw2bag

./: CMakeLists.txt  README.md  main.cc  package.xml
conf/: cam6_20230328.json  demo.json  lidar2cam_20230328.json
include/: config.h  handler.h
proto/: error_code.proto  header.proto  message.proto  pointcloud.proto  sensor_image.proto
src/: config.cc  handler.cc
